--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
   <section id="conteiner">
-    <footer>
-        <p>desenvolvido pelo andre e joao</p>
-    </footer>
+  
   </section>
+  <footer>
+    <p>desenvolvido pelo andre e joao</p>
+</footer>
+
+  <script src="perguntas.js"></script>
 </body>
 </html>
