--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   </section>
   <footer>
-    <p>desenvolvido pelo andre e joao</p>
+    <p>desenvolvido pelo André e Wesley</p>
 </footer>
  <script src="main.js"></script>
   <script src="perguntas.js"> </script>
