--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade AW</title>
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-  <section id="conteiner">
-  
-  </section>
-  <footer>
-    <p>desenvolvido pelo André e Wesley</p>
-</footer>
- <script src="main.js"></script>
-  <script src="perguntas.js"> </script>
+    <header>
+        <a href="index.html">Pagina 1</a>
+        <a href="projeto2.html">Pagina 2</a>
+    </header>
+    <section id="container">
+
+    </section>
+    <footer>
+        <p> Desenvolvido por André e Wesley</p>
+    </footer>
+
+    <script src="main.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
