--- a/projeto2.html
+++ b/projeto2.html
@@ -19,7 +19,7 @@
         <p> Desenvolvido por André e Wesley</p>
     </footer>
 
-    <script src="projeto.js"></script>
+    <script src="projeto2.js"></script>
     <script src="perguntas.js"></script>
 </body>
 </html>
