--- a/projeto2.html
+++ b/projeto2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="projeto2.css">
-    <title>Document</title>
+    <title>Projeto 2</title>
 </head>
 <body>
     <header>
